test/fail/suggest-type.mo
import Prim "mo:⛔";

type T = Prim.Types.Num;
